--- a/src/adhocracy/static_src/stylesheets/general/_misc.scss
+++ b/src/adhocracy/static_src/stylesheets/general/_misc.scss
@@ -62,16 +62,6 @@ a.icon_link {
     display: inline-block;
 }
 
-.meta, .utility {
-    color: $fg1;
-    font-size: 11px;
-}
-.utility h2, .utility h3, .utility h4 {
-    display: inline-block;
-    margin-right: 10px;
-    margin-bottom: 0px;
-}
-
 .countdown { font-size: 11px; }
 
 .over { font-size: 11px; color: darkred; }
